--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 17 10:44:38 ICT 2018
-sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
+#Thu Nov 08 22:39:01 ICT 2018
+sdk.dir=C\:\\Users\\Mzrlx\\AppData\\Local\\Android\\Sdk
